<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	
	<item android:id="@+id/action_search"
		android:title="@string/search_menu_title"
		android:menuCategory="alternative"
		android:icon="@drawable/ic_action_search"
		android:showAsAction="always|collapseActionView"
		android:actionViewClass="android.widget.SearchView" />
	
	<item android:id="@+id/action_start_svc"
		android:title="@string/start_menu_title"
		android:menuCategory="system"
		android:icon="@drawable/ic_action_play"
		android:showAsAction="ifRoom" />
	
	<item android:id="@+id/action_settings"
		android:title="@string/action_settings_title"
		android:menuCategory="secondary" />
	
	<item android:id="@+id/action_show_info"
		android:title="@string/info_menu_title"
		android:menuCategory="secondary" />
</menu>
