<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:sanse="http://schemas.android.com/apk/res-auto"
	android:id="@+id/app_detail_external_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:divider="@drawable/grey_line"
	android:showDividers="middle"
	android:orientation="vertical"
	android:weightSum="1"
	tools:context="com.ilariosanseverino.apploud.AppDetailFragment"
	tools:ignore="MergeRootFrame" >

	<RelativeLayout
		android:id="@+id/title_container"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="0.2"
		android:gravity="center" >

		<TextView
			android:id="@+id/app_detail"
			style="?android:attr/textAppearanceLarge"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:textIsSelectable="true" />

		<TextView
			android:id="@+id/hint_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@id/app_detail"
			android:gravity="center_horizontal"
			android:text="@string/detail_frag_role" />
	</RelativeLayout>

	<com.ilariosanseverino.apploud.ui.widgets.IgnorableTuning
		android:id="@+id/ring_tuning"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="0.16"
		sanse:enabled="false"
		sanse:popup_icon="@drawable/ic_action_ring_volume"
		sanse:popup_text="@string/ring_icon_descr" >

		<SeekBar
			android:id="@+id/ring_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
	</com.ilariosanseverino.apploud.ui.widgets.IgnorableTuning>

	<com.ilariosanseverino.apploud.ui.widgets.IgnorableTuning
		android:id="@+id/media_tuning"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="0.16"
		sanse:enabled="false"
		sanse:popup_icon="@drawable/ic_action_volume_on"
		sanse:popup_text="@string/media_icon_descr" >

		<SeekBar
			android:id="@+id/media_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
	</com.ilariosanseverino.apploud.ui.widgets.IgnorableTuning>

	<com.ilariosanseverino.apploud.ui.widgets.IgnorableTuning
		android:id="@+id/notify_tuning"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="0.16"
		sanse:enabled="false"
		sanse:popup_icon="@drawable/sym_action_chat"
		sanse:popup_text="@string/notify_icon_descr" >

		<SeekBar
			android:id="@+id/notify_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
	</com.ilariosanseverino.apploud.ui.widgets.IgnorableTuning>

	<com.ilariosanseverino.apploud.ui.widgets.IgnorableTuning
		android:id="@+id/sys_tuning"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="0.16"
		sanse:enabled="false"
		sanse:popup_icon="@drawable/ic_action_phone"
		sanse:popup_text="@string/sys_icon_descr" >

		<SeekBar
			android:id="@+id/sys_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
	</com.ilariosanseverino.apploud.ui.widgets.IgnorableTuning>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="0.16"
		android:orientation="horizontal"
		android:weightSum="1"
		android:divider="@drawable/grey_line"
		android:showDividers="middle" >

		<com.ilariosanseverino.apploud.ui.widgets.IgnorableTuning
			android:id="@+id/roto_tuning"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			sanse:enabled="false"
			sanse:popup_icon="@drawable/ic_action_rotate_right"
			sanse:popup_text="@string/roto_label_descr" >

			<ToggleButton
				android:id="@+id/roto_toggle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/rotate_button_selector"
				android:textOff=""
				android:textOn=""
				android:textSize="0sp" />
		</com.ilariosanseverino.apploud.ui.widgets.IgnorableTuning>

		<com.ilariosanseverino.apploud.ui.widgets.IgnorableTuning
			android:id="@+id/gps_tuning"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			sanse:enabled="false"
			sanse:popup_icon="@drawable/ic_action_location_searching"
			sanse:popup_text="@string/gps_label_descr" >

			<ToggleButton
				android:id="@+id/gps_toggle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/gps_button_selector"
				android:textOff=""
				android:textOn=""
				android:textSize="0sp" />
		</com.ilariosanseverino.apploud.ui.widgets.IgnorableTuning>
	</LinearLayout>

</LinearLayout>